# wet-net

./: .env.example  .env.template  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  MIGRATION_INCONSISTENCIES_REPORT.md  README.md  main.py  pyproject.toml  releasing.md
.github/workflows/: release.yml  test.yml
notebooks/: 01_pre_process.ipynb  02_train.ipynb  03_evaluate.ipynb  pre_process.ipynb  wetnet_evaluate_report.ipynb
results/: dummy_results.csv
results/wetnet/seq96_recall/: augmented_metrics.csv  config.json  history.json  metrics.csv  predictions.csv  vib.pt
scripts/: pre_process.py
src/wet_net/: __init__.py  paths.py
src/wet_net/config/: best_configs.yaml  tri_task.py
src/wet_net/data/: datasets.py  preprocess.py
src/wet_net/eval/: metrics.py  predictions.py
src/wet_net/models/: blocks.py  vib.py  wetnet.py
src/wet_net/pipelines/: tri_task.py
src/wet_net/scripts/: evaluate.py  hf_util.py  pre_process.py  test_wet_net.py  train.py  visualize.py  wet_net.py
src/wet_net/training/: fusion.py  loops.py  utils.py
streamlit-site/pages/: dummy.py
tests/: test_cli.py  test_cli_new.py  test_train_cli.py
